# pijcodec-desu

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
include/: PIJCodec.hpp
pijcodec/: __init__.py
src/: PIJCodec.cpp  bindings.cpp  main.cpp  main_viewer.cpp  pij_convert.cpp  pij_viewer.cpp
tests/: config.yaml.example  test.py  test_compare.py  test_encode.py  test_key.key
tests/imcodecs/: base.py  jpeg_codec.py  pij_codec.py  png_codec.py
