[build-system]
requires = ["scikit-build-core>=0.7", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "pijcodec"
version = "0.1.0"
description = "Python bindings for the PIJ codec"
requires-python = ">=3.8"
dependencies = ["numpy", "opencv-python>=4.8"]
license = {text = "MIT"}
readme = "README.md"
